--- a/platform_code/assessment/templates/assessment/labelling/create-labelling-modal.html
+++ b/platform_code/assessment/templates/assessment/labelling/create-labelling-modal.html
@@ -9,9 +9,9 @@
 
 <div class="modal-body">
     <p>{% blocktrans trimmed %}
-        Do you confirm that you have read the
-        <a href="https://www.labelia.org/en/eligibilite-et-conditions" target="_blank">general conditions of use,
-            the pricing conditions and that you have the mandate</a> to initiate a labeling request?
+        Do you confirm that you are aware of
+        <a href="https://www.labelia.org/fr/eligibilite-et-conditions" target="_blank">how to become certified
+            and the pricing conditions</a>?
        {% endblocktrans %}
     </p>
 </div>
