--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -341,6 +341,10 @@ color: #4D566B;
    width: 100px;
 }
 
+.width-200 {
+    width: 200px;
+}
+
 .same-size-220 {
     width: 220px;
 }
@@ -1341,6 +1345,12 @@ body.navbar-is-fixed-top {
     overflow-y: scroll;
     height: 100px;
     background-color: #f4f4f4;
+}
+
+.results-buttons-grid {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 30px;
 }
 
 
